--- a/package.json
+++ b/package.json
@@ -1,34 +1,35 @@
 {
-  "name": "shoppinglist",
-  "version": "1.0.0",
-  "description": "build with the MERN Stack",
-  "main": "server.js",
-  "scripts": {
-    "client-install": "npm install --prefix client",
-    "start": "node server.js",
-    "server": "nodemon server.js",
-    "client": "npm start --prefix client",
-    "dev": "concurrently \"npm run server\" \"npm run client\""
-  },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/Gael22/shoppinglist.git"
-  },
-  "author": "Gael Gohoungo",
-  "license": "ISC",
-  "bugs": {
-    "url": "https://github.com/Gael22/shoppinglist/issues"
-  },
-  "homepage": "https://github.com/Gael22/shoppinglist#readme",
-  "dependencies": {
-    "body-parser": "^1.19.0",
-    "concurrently": "^5.2.0",
-    "express": "^4.17.1",
-    "mongoose": "^5.9.15",
-    "react-uuid": "^1.0.2",
-    "uuid": "^8.1.0"
-  },
-  "devDependencies": {
-    "nodemon": "^2.0.4"
-  }
+	"name": "shoppinglist",
+	"version": "1.0.0",
+	"description": "build with the MERN Stack",
+	"main": "server.js",
+	"scripts": {
+		"client-install": "npm install --prefix client",
+		"start": "node server.js",
+		"server": "nodemon server.js",
+		"client": "npm start --prefix client",
+		"dev": "concurrently \"npm run server\" \"npm run client\"",
+		"heroku-postbuild": "NPM_CONFIG_PRODUCTION=false npm install --prefic client && npm run build --prefix client"
+	},
+	"repository": {
+		"type": "git",
+		"url": "git+https://github.com/Gael22/shoppinglist.git"
+	},
+	"author": "Gael Gohoungo",
+	"license": "ISC",
+	"bugs": {
+		"url": "https://github.com/Gael22/shoppinglist/issues"
+	},
+	"homepage": "https://github.com/Gael22/shoppinglist#readme",
+	"dependencies": {
+		"body-parser": "^1.19.0",
+		"concurrently": "^5.2.0",
+		"express": "^4.17.1",
+		"mongoose": "^5.9.15",
+		"react-uuid": "^1.0.2",
+		"uuid": "^8.1.0"
+	},
+	"devDependencies": {
+		"nodemon": "^2.0.4"
+	}
 }
