--- a/client/package.json
+++ b/client/package.json
@@ -31,7 +31,8 @@
 		"redux": "^4.0.5",
 		"redux-thunk": "^2.3.0",
 		"typescript": "^4.0.3",
-		"uuid": "^8.1.0"
+		"uuid": "^8.1.0",
+		"yarn.lock": "0.0.1-security"
 	},
 	"scripts": {
 		"start": "react-scripts start",
